# PyCommon

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-push.yml  python_on_closed_pull_request_to_develop.yml  python_on_closed_pull_request_to_master.yml  python_on_create_pull_request_to_develop.yml  python_on_create_pull_request_to_master.yml  python_on_pull_request.yml  python_on_push_to_develop.yml  python_on_push_to_master.yml  python_on_release.yml
config/: dev_requirements.txt  env.yml  requirements.txt
docs/: Makefile  gen_doc.py
docs/src/: conf.py  index.md  index.rst  modules.rst  package.md  py_common.base.prints.rst  py_common.base.rst  py_common.file.rst  py_common.log.rst  py_common.logger.rst  py_common.md  py_common.path.path.rst  py_common.path.rst  py_common.rst  py_common.sp_base.m_hello_world.rst  py_common.sp_log.m_log.rst  py_common.sp_script.m_run.rst  todo.md
docs/src/py_common/: base.md  file.md  logger.md  path.md
docs/src/py_common/base/: hello_world.md  prints.md
docs/src/py_common/file/: dir.md
docs/src/py_common/path/: path.md
src/base/: hello_world.py
src/path/: path.py
src/py_common/: __init__.py
src/py_common/base/: __init__.py  hello_world.py  print.py  prints.py
src/py_common/file/: dir.py
src/py_common/log/: log.py
src/py_common/path/: path.py
src/py_common/script/: run.py
src/py_common/sp_docker/: __init__.py  m_docker.py
src/py_common/sp_env/: __init__.py  m_conf.py
src/py_common/sp_file/: __init__.py  m_file.py
src/py_common/sp_log/: __init__.py  m_log.py
src/py_common/sp_path/: __init__.py  m_path.py
src/py_common/sp_script/: __init__.py  m_run.py
tests/: test_hello_world.py  tests_run.py
tests/integration_tests/: __init__.py  conftest.py  integration_tests_run.py  test_run_with_logger.py
tests/unit_tests/: conftest.py  pytest.ini  test_base_hello_world.py  test_base_prints.py  test_docker_docker.py  test_env_conf.py  test_file_dir.py  test_file_file.py  test_log_log.py  test_path_path.py  test_script_run.py  unit_tests_run.py
tests/ut_tests/: test_base_hello_world.py
tools/: build_and_test.py  cleanup.py  env_setup.py  install.py  run.py
tools/checkers/: .pylintrc  bandit_run.py  black_run.py  docstrcov_run.py  lizard_run.py  pydockstyle_run.py  pydocstyle_run.py  pylint.py  pylint_run.py  pyroma_run.py  vulture_run.py
