[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = ''

[tool.vulture]
exclude = []
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = false

[tool.bandit]
exclude_dirs = []
tests = []
skips = []