[metadata]
name = PyCommon
version = 0.0.1
author = 0p553cd3v
author_email = 0p553cd3v@gmail.com
description = Python common library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0p553cd3v/Python-common-lib
project_urls =
    Bug Tracker = https://github.com/0p553cd3v/Python-common-lib/issues
    Repository = https://github.com/0p553cd3v/Python-common-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src