[metadata]
name = opssecdev_pycommon
version = 0.0.2
author = 0p553cd3v
author_email = 0p553cd3v@gmail.com
description = Python common modles library for system administration
keywords = common, library, admin, devops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0p553cd3v/Python-common-lib
project_urls =
    Bug Tracker = https://github.com/0p553cd3v/Python-common-lib/issues
    Repository = https://github.com/0p553cd3v/Python-common-lib
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Framework :: Pytest
    Framework :: tox
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 
    src
exclude =
    build*
    tools*
    tests*
